Transformed some classes into record classes